--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple Pong Game</title>
+    <title>Pong</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ntuthuko's Pong Game</h1>
+    <div id="game-settings">
+        <label for="game-minutes">Minutes to play:</label>
+        <input type="number" id="game-minutes" min="1" max="60" value="1">
+        <button id="start-game-btn">Start Game</button>
+    </div>
+    <div id="header-row">
+        <h1>Pong Game: Created by Ntuthuko Maphalala</h1>
+        <div id="game-timer">Time: <span id="timer-value">0:00</span></div>
+    </div>
     <canvas id="pong" width="800" height="500"></canvas>
+    <div id="scoreboard">
+        <span id="player1-face">😐</span> <span id="player1-score">0</span> : <span id="player2-score">0</span> <span id="player2-face">😐</span>
+        <span id="winner-announcement" style="margin-left: 18px;"></span>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
